# ML_Portfolio_Recommendation_System

./: .env.example  .gitignore  EDA_report.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VERIFICATION.md  pyproject.toml
configs/: assets.yaml  pipeline.yaml
notebooks/: 01_data_exploration.ipynb
src/portfolio_ml/config/: loader.py
src/portfolio_ml/data_sources/: base.py  yahoo.py
src/portfolio_ml/ingestion/: ingest_prices.py
src/portfolio_ml/pipelines/: daily_market_data_pipeline.py
src/portfolio_ml/storage/: duckdb_client.py  parquet.py  paths.py
src/portfolio_ml/transformations/: build_features.py  clean_prices.py
src/portfolio_ml/utils/: dates.py  logging.py
src/portfolio_ml/validation/: checks.py  schemas.py
tests/: test_clean_prices.py  test_config_loader.py  test_data_validation.py  test_feature_generation.py  test_yahoo_source.py
